samples/_failures_safe/1761376528_4cd2bd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c94ecf32.c: In function ‘parse_string’:
./samples/SAFE/__tmp_c94ecf32.c:164:14: error: expected ‘;’ at end of input
  164 |             t
      |              ^
      |              ;
./samples/SAFE/__tmp_c94ecf32.c:164:13: error: expected declaration or statement at end of input
  164 |             t
      |             ^
./samples/SAFE/__tmp_c94ecf32.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c94ecf32.c:164:13: error: expected declaration or statement at end of input
